[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
"tokio" = { version = "^1.42.0", features = ["full"] }
"eyre" = "^0.6.12"

diesel = { version = "2.2.0", features = ["postgres", "serde_json", "chrono", "uuid"] }
diesel-async = { version = "^0.5.1", features = ["postgres", "deadpool"] }

serde = { version = "^1.0.216", features = ["derive"] }
serde_json = "^1.0.133"
chrono = { version = "^0.4.39", features = ["serde"] }
uuid = { version = "^1.4.1", features = ["v4", "v7", "serde"] }
